# ChangeLog for sci-biology/codonw
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  08 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  sci-biology/codonw: Updating remote-id in metadata.xml

*codonw-1.4.4-r2 (30 May 2015)

  30 May 2015; Justin Lecher <jlec@gentoo.org> +codonw-1.4.4-r2.ebuild,
  -codonw-1.4.4-r1.ebuild, metadata.xml:
  sci-biology/codonw: Workaround file collision by appending PN to every
  command, bug #344713, bug #550388

  10 Jan 2015; Marius Brehler <marbre@linux.sungazer.de>
  condow-1.4.4-r1.ebuild:
  Move to EAPI=5.

*codonw-1.4.4-r1 (08 Nov 2010)

  08 Nov 2010; Kacper Kowalik <xarthisius@gentoo.org> -codonw-1.4.4.ebuild,
  +codonw-1.4.4-r1.ebuild:
  Respect CC,CFLAGS,LDFLAGS. Add missing die. Drop empty deps.

  28 Feb 2009; Andrey Kislyuk <weaver@gentoo.org> ChangeLog:
  New package sci-biology/codonw, ebuild written by me