@@ -1,1 +1,2 @@
 DIST CodonWSourceCode_1_4_4.tar.gz 161908 SHA256 951e2a686f7849e0fa225b83b09842d4cf822ecafd67bff0438fc815512183b8 SHA512 31e596089b0ebb9e30b2d73727e15d28042debdecbde8f7e5b68f3e6ce863d1a865f4c6480d337d87cbac1a90b92357151361340887ac9f3175503f72cf2d6bb WHIRLPOOL 4c1fc51e2deb7c6a3b7f4eb38d8454f77a8bcd160e23c975b3270c9ddcf82bdc003871860721ba72535f83d2a53465f2305358fdb9a9d87f642ee4c349ad8168
+DIST JohnPedenThesisPressOpt_water.pdf 1814403 SHA256 34e1e09280ff0a0fcc07ab422b0a6886f4aae964ff7021bbd3463eec8101ee24 SHA512 293c174eaed3048f0cc34458d9230356fb3fbe110777dbeb01f7b22c964209773773d8707231326986c70753c9f463fb9d361567b4e117520dc0f5bd3dde5c53 WHIRLPOOL 5f7790338712ca2fbec8a5278d1513ada1ea34c6d8110740dd946ee0277421450ea9c03cbc70a5431f2c65139eb1622c7144f911dee058d30de70f1dd8f5b1e8
