@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  15 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz>
+  codonw-1.4.4-r2.ebuild:
+  sci-biology/codonw: add original Thesis of John Peden describing codonw
+  package in more detail
+
   08 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   sci-biology/codonw: Updating remote-id in metadata.xml
 
